[package]
name = "iokit-sys"
version = "0.5.0"
edition = "2024"

[dependencies]
block = "0.1.6"
core-foundation-sys = "0.8.4"
libc = "0.2.148"
mach = "0.3.2"
objc = "0.2.7"

[build-dependencies]
bindgen = { version = "0.72", features = ["prettyplease"] }
env_logger = "0.11.8"
log = "0.4.27"
simple_logger = "5.0.0"
